Add Flyway migration, update date types, improve ReagentType convertion